[gd_scene load_steps=4 format=3 uid="uid://ow6a1lrkuggv"]

[ext_resource type="PackedScene" uid="uid://dqknm47t86x4h" path="res://reorder_tree/ReorderTree.tscn" id="1_o5sk1"]
[ext_resource type="Script" path="res://ui/GameUI.gd" id="1_ook07"]
[ext_resource type="Theme" uid="uid://c4v5mpv1jocyy" path="res://ui/default_theme.tres" id="1_q6a1f"]

[node name="GameUI" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_q6a1f")
script = ExtResource("1_ook07")

[node name="SplitPanel" type="HSplitContainer" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 1023.0
offset_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 200

[node name="ItemTree" parent="SplitPanel" instance=ExtResource("1_o5sk1")]
custom_minimum_size = Vector2(55, 0)
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 255.0
offset_bottom = 598.0
size_flags_vertical = 3
mouse_filter = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SplitPanel"]
offset_left = 267.0
offset_right = 1022.0
offset_bottom = 598.0
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="ActionContainer" type="HFlowContainer" parent="SplitPanel/ScrollContainer"]
offset_right = 755.0
size_flags_horizontal = 3

[connection signal="selected_nodes_changed" from="SplitPanel/ItemTree" to="." method="_on_item_tree_selected_nodes_changed"]
